@@ -2,10 +2,6 @@
 
 AUTOMAKE_OPTIONS = 1.5 subdir-objects
 
-# 'make QUIET=' overrides './configure --enable-quiet'.
-# 'make QUIET=y' overrides './configure' without '--enable-quiet'.
-LIBTOOL = @LIBTOOL@ $(QUIET:y=--quiet)
-
 if MAINTAINER_MODE
 # Export these so that we run the locally installed autotools when building
 # from a bootstrapped SVN tree.
